--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "sass": "^1.26.3"
   },
   "scripts": {
     "predeploy": "npm run build",
