--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-{
+{  
+  "homepage": "http://moonlarya.github.io/router",
   "name": "router",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://moonlarya.github.io/router/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
